<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/txtNavhome">

    </item>


    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/movie_icon"
        android:title="@string/txtNavMovies">

    </item>

    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/tv_icon"
        android:title="@string/txtNavTv">

    </item>
</group>

<group android:checkableBehavior="single">

    <item android:title="@string/txtNavCommunicate">

        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/info_icon"
                android:title="@string/txtNavAbout">

            </item>


        </menu>

    </item>

</group>

</menu>
